infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fru-api
  namespace: default
  labels:
    app: fru-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: fru-api
